# silence

./: .gitignore  Cargo.toml  LICENSE  README.md  tauri.conf.json
.github/: FUNDING.yml
deploy-tool/: Cargo.toml  README.md
deploy-tool/src/: builder.rs  deployer.rs  main.rs  packager.rs  ssh.rs
icons/: create_icon.py  icon.icns
relay-server/: Cargo.toml  README.md  cherry-setup.md  deploy.sh  test-client.rs
relay-server/silence-relay-deploy/: silence-relay
relay-server/src/: main.rs
silence-relay-deploy/: install.sh  silence-relay.service
src/: crypto.rs  lib.rs  main.rs  network.rs
src-tauri/: index.html
