[package]
name = "silence-relay"
version = "0.1.0"
edition = "2021"
description = "Minimal TCP relay server for Silence P2P communication"

[dependencies]
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "macros", "time", "io-util", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }

[[bin]]
name = "silence-relay"
path = "src/main.rs"

